traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:21: error: type mismatch;
 found   : Int(1)
 required: String
ecritMessage(a1);setPos(0,i);a5=a5+1
                                   ^TraversalByColumn:24: error: not found: value a6
ecritMessage(a1);setPos(0,i);a6=a6+1
                             ^TraversalByColumn:27: error: not found: value a7
ecritMessage(a1);setPos(0,i);a7=a7+1
                             ^