traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
var a1=1
  var a2=6
  var a3= 12
  var a4= 18
  var a5=
ecritMessage(0)
  setPos(0,1)
for (i<- 2 to 6){
ecritMessage(a1);setPos(0,i);a1=a1+1
  }
  for (i<- 2 to 6){
ecritMessage(a1);setPos(0,i);a2=a2+1
  }
  for (i<- 2 to 6){
ecritMessage(a1);setPos(0,i);a3=a3+1
  }
  for (i<- 2 to 6){
ecritMessage(a1);setPos(0,i);a4=a4+1
  }
  for (i<- 2 to 6){
ecritMessage(a1);setPos(0,i);a5=a5+1
  }
  for (i<- 2 to 6){
ecritMessage(a1);setPos(0,i);a6=a6+1
  }
  for (i<- 2 to 6){
ecritMessage(a1);setPos(0,i);a7=a7+1
  }
}
